--- a/app/components/directory.hbs
+++ b/app/components/directory.hbs
@@ -15,7 +15,7 @@
     </div>
   {{/if}}
 
-  <FileUpload @name="content" @multiple={{true}} @onfileadd={{@upload}} @class="upload-placeholder">
+  <FileUpload @name="content" @multiple={{true}} @onFileAdd={{@upload}} @class="upload-placeholder">
   </FileUpload>
 </DavrosUploader>
 
