some minor styling tweaks

--- a/app/components/directory.hbs
+++ b/app/components/directory.hbs
@@ -106,10 +106,10 @@
         {{#if this.showExtraFields}}
         <th class="updated py-2">
           <a href="#" {{on "click" (toggle this "showExtraFields")}}>
-            <span class="short block sm:hidden">
-              Updated
+            <span class="short block sm:hidden pl-2">
+              Upd
             </span>
-            <span class="long hidden sm:block">
+            <span class="long hidden sm:block pl-2">
               Updated
             </span>
           </a>
