--- a/app/components/files/type-default-type.hbs
+++ b/app/components/files/type-default-type.hbs
@@ -1,3 +1,3 @@
-<div class="no-preview text-center mt-6">
+<div class="no-preview w-full h-full flex items-center justify-center text-center border-t">
   No preview
 </div>
