--- a/app/templates/publishing.hbs
+++ b/app/templates/publishing.hbs
@@ -52,7 +52,7 @@ sandstorm-www.{{this.publishing.domain}}. IN TXT {{this.publishing.publicId}}
     <form class="setup max-w-sm">
       <label for="custom-domain">Optional Custom Domain</label>
       <input name="custom-domain" type="text" class="form-input"
-             value={{this.domain}} {{on "keyup" (fn this.onChange)}} />
+             value={{this.domain}} {{on "keyup" this.onChange}} />
       {{#if this.validationError}}
         <p class="text-red-500 font-sm">{{this.validationError}}</p>
       {{/if}}
