--- a/app/components/davros-uploader.hbs
+++ b/app/components/davros-uploader.hbs
@@ -1,6 +1,6 @@
 {{yield (hash supported=this.supported active=this.active valid=this.valid) this.queue}}
 
 <div
-  {{did-insert (fn this.addBodyEventListeners)}}
-  {{will-destroy (fn this.removeBodyEventListeners)}}
+  {{did-insert this.addBodyEventListeners}}
+  {{will-destroy this.removeBodyEventListeners}}
 />
