--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,8 @@
 <div class="flex">
   <div class="flex flex-1 flex-row overflow-hidden">
     <div class="flex flex-col flex-1 overflow-hidden" id="content">
+      <DavrosUploader />
+
       {{outlet}}
     </div>
 
