fix aria labels on icons

--- a/app/components/icon.hbs
+++ b/app/components/icon.hbs
@@ -1,1 +1,1 @@
-<div class="material-icons" ...attributes>{{@icon}}</div>
+<div class="material-icons" aria-label={{@ariaLabel}} ...attributes>{{@icon}}</div>
