default background to white, for Netscape 4

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<div class="flex">
+<div id="app" class="flex bg-white">
   <div class="flex flex-1 flex-row overflow-hidden">
     <div class="flex flex-col flex-1 overflow-hidden" id="content">
       <DavrosUploader />
