test using real backend

--- a/app/components/directory.hbs
+++ b/app/components/directory.hbs
@@ -28,6 +28,7 @@
           @onClick={{toggle this "deleteDialogActive"}} />
       {{/if}}
     </div>
+    <div class="reload" {{on "click" this.reload}}></div>
 
     {{!-- only displayed on mobile --}}
     <div class="compact-actions block sm:hidden">
