add multi-file action support

--- a/app/components/delete-dialog.hbs
+++ b/app/components/delete-dialog.hbs
@@ -1,5 +1,5 @@
 <div class="modal-title flex">
-  <h2 class="text-lg font-bold">Delete Directory</h2>
+  <h2 class="text-lg font-bold">Delete Files</h2>
   <span class="flex-1"></span>
   <button type="button" {{on "click" @onClose}}>
     <Icon @icon="close"/>
