--- a/app/components/file.hbs
+++ b/app/components/file.hbs
@@ -78,7 +78,7 @@
     </div>
   </div>
 
-  <div class="preview flex-1">
+  <div class="preview flex-1 relative overflow-auto">
     {{component this.model.typeComponent model=this.model}}
   </div>
 </div>
