--- a/app/components/files/type-image.hbs
+++ b/app/components/files/type-image.hbs
@@ -1,1 +1,3 @@
-<img alt="file {{@model.name}}" src={{@model.rawPath}}>
+<div class="absolute inset-0">
+  <img class="w-full h-full object-contain" alt="file {{@model.name}}" src={{@model.rawPath}}>
+</div>
