--- a/app/components/title-bar.hbs
+++ b/app/components/title-bar.hbs
@@ -1,3 +1,5 @@
-<nav class="toolbar flex items-center justify-between bg-blue-600 text-white p-1 h-12 pl-4">
-  {{yield}}
-</nav>
+<div class="relative h-12">
+  <nav class="absolute inset-0 toolbar flex items-center justify-between bg-blue-600 text-white p-1 h-12 pl-4">
+    {{yield}}
+  </nav>
+</div>
