--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <div id="app" class="flex bg-white">
-  <div class="flex flex-1 flex-row overflow-hidden">
-    <div class="flex flex-col flex-1 overflow-hidden" id="content">
+  <div class="flex flex-1 flex-row">
+    <div class="flex flex-col flex-1" id="content">
       <DavrosUploader />
 
       {{outlet}}
