--- a/app/components/davros-uploader.hbs
+++ b/app/components/davros-uploader.hbs
@@ -1,6 +1,6 @@
 <DavrosDropzone @name="content" as |dropzone queue|>
   {{#if dropzone.active}}
-    <div id="dropzone-overlay" class="fixed inset-0 flex justify-center items-center bg-opacity-50 bg-black text-white">
+    <div id="dropzone-overlay" class="fixed inset-0 flex justify-center items-center bg-opacity-50 bg-black text-white z-10">
       <div class="message p-8 bg-black bg-opacity-75 rounded-sm border-2 border-green-500 shadow">
         <Icon @icon="add_circle" class="align-top" />
         Drop files or directories to add them to
