--- a/app/components/selected-action.hbs
+++ b/app/components/selected-action.hbs
@@ -1,4 +1,4 @@
-<button type="button" class="align-middle -mt-4 -mb-3 icon-button p-1 mx-2 rounded hover:bg-blue-300" {{on "click" @onClick}}>
+<button type="button" class="align-middle -mt-4 -mb-3 icon-button p-1 ml-2 rounded hover:bg-blue-300" {{on "click" @onClick}}>
   <Icon @icon={{@icon}} @ariaLabel={{@title}} class="block text-md" />
 
   <EmberTooltip>
