--- a/app/styles/fonts.css
+++ b/app/styles/fonts.css
@@ -2,10 +2,8 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: local('Material Icons'), local('MaterialIcons-Regular'),
-    url(../fonts/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2) format('woff2'),
-    url(../fonts/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNa.woff) format('woff'),
-    url(../fonts/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNZ.ttf) format('truetype');
+  src: url(../fonts/materialicons/v99/MaterialIcons-Regular.subset.woff2) format('woff2'),
+    url(../fonts/materialicons/v99/MaterialIcons-Regular.ttf) format('truetype');
 }
 
 .material-icons {
