--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -10,4 +10,8 @@
       <Sidebar @canSync={{this.canSync}} @canEdit={{this.canEdit}} />
     </div>
   </div>
+
+  <ErrorNotification />
 </div>
+
+<DragGhost />
