--- a/app/components/directory.hbs
+++ b/app/components/directory.hbs
@@ -70,154 +70,49 @@
 </PhotoSwipe>
 
 {{#if this.model.sortedFiles}}
-  <table class="file-list relative w-full {{if this.showExtraFields "" "noExtraFields"}}">
-    <thead>
-      <tr class="text-left text-sm sm:text-md">
-        <th class="{{if this.isSelecting "table-cell" "hidden"}} sm:table-cell sticky top-0 bg-white">
-          <label class="px-4 py-3 flex">
-            <input
-              type="checkbox"
-              class="checkbox"
-              indeterminate={{this.someFilesSelected}}
-              checked={{this.allFilesSelected}}
-              {{on "change" this.toggleSelectAll}}
-            />
-          </label>
-        </th>
-        <th class="name py-2 {{if this.isSelecting "pl-0" "pl-6"}} sm:pl-0 sticky top-0 bg-white">
-          {{#if this.selectedFiles.size}}
-            {{this.selectedFiles.size}}
-            selected file{{if (gt this.selectedFiles.size 1) "s"}}:
-
-            {{#if this.canEdit}}
-              <SelectedAction
-                @title="Delete {{this.selectedFiles.size}} items"
-                @icon="delete"
-                @onClick={{toggle this "deleteDialogActive"}} />
-            {{/if}}
-          {{else}}
-            Name
-          {{/if}}
-        </th>
-        {{#if this.showExtraFields}}
-          <th class="updated py-2 sticky top-0 bg-white">
-            <a href="#" {{on "click" (toggle this "showExtraFields")}}>
-              <span class="short block sm:hidden pl-2">
-                Upd
-              </span>
-              <span class="long hidden sm:block pl-2">
-                Updated
-              </span>
-            </a>
-          </th>
-          <th class="size py-2 pr-4 text-right sticky top-0 bg-white">
-            <a href="#" {{on "click" (toggle this "showExtraFields")}}>
-              <span class="short block sm:hidden">
-                Size
-              </span>
-              <span class="long hidden sm:block">
-                Size
-              </span>
-            </a>
-          </th>
-        {{else}}
-          <th class="fields text-right w-8 sticky top-0 bg-white">
-            <a class="align-middle" href="#" {{on "click" (toggle this "showExtraFields")}}>
-              <Icon class="p-2 -my-1" @icon="chevron_left" />
-            </a>
-          </th>
-        {{/if}}
-      </tr>
-    </thead>
-
-    <tbody>
-      {{#each this.model.sortedFiles as |file|}}
-        <tr class="text-sm bg-gray-100 sm:text-base {{if (has-item file this.selectedFiles) "selected"}}">
-          <td class="{{if this.isSelecting "table-cell" "hidden"}} sm:table-cell">
-            <label class="p-4 flex">
-              <input
-                type="checkbox"
-                class="checkbox"
-                checked={{has-item file this.selectedFiles}}
-                {{on "change" (fn this.toggleSelect file)}}
-                {{on "click" (fn this.toggleShiftSelect file)}}
-              />
-            </label>
-          </td>
-          <td class="p-2 {{if this.isSelecting "pl-0"}} sm:py-3 sm:pl-0" colspan={{if this.showExtraFields '1' '3'}}>
-            <LinkTo @route="file" @model={{file.linkedPath}} class="filename p-2 table table-fixed w-full">
-              {{#if file.isDirectory}}
-                <Icon @icon="folder" class="mr-3 {{if this.isSelecting "ml-0" "ml-4"}} sm:ml-0 float-left text-gray-700" />
-              {{else}}
-                {{#if (eq file.type "image")}}
-                  <ImageThumbnail class="mr-3 {{if this.isSelecting "ml-0" "ml-4"}} sm:ml-0 h-full float-left" @original={{file.rawPath}} @timestamp={{file.mtime}} @width={{24}} @height={{24}} @op="fit" />
-                {{else}}
-                  <Icon @icon={{file.typeIcon}} class="mr-3 {{if this.isSelecting "ml-0" "ml-4"}} sm:ml-0 float-left" />
-                {{/if}}
-              {{/if}}
-
-              <div class="truncate">{{file.name}}</div>
-            </LinkTo>
-          </td>
-
-          {{#if this.showExtraFields}}
-            <td class="updated p-2" title={{file.mtime}}>
-              <span class="short truncate block sm:hidden">
-                {{#if this.model.lotsOfFiles}}
-                  {{relative-time file.mtime locale="en-short"}}
-                {{else}}
-                  {{relative-time file.mtime locale="en-short" interval=5000}}
-                {{/if}}
-              </span>
-
-              <span class="long truncate hidden sm:block">
-                {{#if this.model.lotsOfFiles}}
-                  {{relative-time file.mtime locale="en" addSuffix=true}}
-                {{else}}
-                  {{relative-time file.mtime locale="en" interval=5000 addSuffix=true}}
-                {{/if}}
-              </span>
-            </td>
-
-            <td class="size p-2 pr-4 text-right" title="{{commify file.size}} bytes">
-              <span class="short block sm:hidden">
-                {{filesize file.size}}
-              </span>
-              <span class="long hidden sm:block">
-                {{filesize file.size}}
-              </span>
-            </td>
-          {{/if}}
-        </tr>
-      {{/each}}
-    </tbody>
-  </table>
+  <DirectoryListing
+    @model={{@model}}
+    @canSelect={{true}}
+    @isSelecting={{this.isSelecting}}
+    @canEdit={{this.canEdit}}
+    @selectedFiles={{this.selectedFiles}}
+    @openDialog={{this.openDialog}}
+  />
 {{else}}
   <div class="empty-notice p-6">
     This directory is empty. You can <a href="#" {{on "click" this.chooseUpload}}>upload some files</a> or just drag them in.
   </div>
 {{/if}}
 
-<ModalContent class="rounded-sm shadow-sm border"
+<ModalContent class="rounded-sm shadow-sm border inset-6 fixed md:max-w-full"
+  @active={{this.moveDialogActive}}
+  @onClose={{fn (mut this.moveDialogActive) false}}
+  as |modalContent|>
+  <MoveFilesDialog
+    @selectedFiles={{this.selectedFiles}}
+    @onClose={{modalContent.onClose}}
+    @onFinish={{this.finishModal}}
+  />
+</ModalContent>
+
+
+<ModalContent class="rounded-sm shadow-sm border w-11/12"
               @active={{this.newDialogActive}}
-                     @onClose={{fn (mut this.newDialogActive) false}}
+              @onClose={{fn (mut this.newDialogActive) false}}
               as |modalContent|>
   <NewDirectoryDialog @onCreate={{@newDirectory}} @onClose={{modalContent.onClose}} />
 </ModalContent>
 
-<ModalContent class="rounded-sm shadow-sm border"
-              @active={{this.deleteDialogActive}}
-                     @onClose={{fn (mut this.deleteDialogActive) false}}
-              as |modalContent|>
-  <DeleteDialog @onDelete={{this.deleteSelected}} @onClose={{modalContent.onClose}}>
-    Are you sure you want to delete
-    {{#if (gt this.selectedFiles.size 1)}}
-      {{this.selectedFiles.size}} files?
-    {{else}}
-      this file?
-    {{/if}}
+<ModalContent class="rounded-sm shadow-sm border w-11/12"
+  @active={{this.deleteDialogActive}}
+  @onClose={{fn (mut this.deleteDialogActive) false}}
+  as |modalContent|>
+  <DeleteDialog @onFinish={{this.finishModal}} @onClose={{modalContent.onClose}} @selectedFiles={{this.selectedFiles}} />
+</ModalContent>
 
-    {{if (gt this.selectedFiles.size 1) "They" "It"}}
-    will also be deleted from any synced clients.
-  </DeleteDialog>
+<ModalContent class="rounded-sm shadow-sm border w-11/12"
+  @active={{this.renameDialogActive}}
+  @onClose={{fn (mut this.renameDialogActive) false}}
+  as |modalContent|>
+  <RenameDialog @onFinish={{this.finishModal}} @onClose={{modalContent.onClose}} @selectedFiles={{this.selectedFiles}} />
 </ModalContent>
