--- a/app/components/drag-ghost.hbs
+++ b/app/components/drag-ghost.hbs
@@ -1,4 +1,6 @@
-<div class="hidden drag-ghost p-2 bg-white border-2 border-green-500 font-bold inline-flex">
-  <Icon @icon="drive_file_move" class="text-gray-700 mr-1" />
-  <span></span>
+<div class="h-0 overflow-hidden">
+  <div class="drag-ghost p-2 bg-white border-2 border-green-500 font-bold inline-flex">
+    <Icon @icon="drive_file_move" class="text-gray-700 mr-1" />
+    <span></span>
+  </div>
 </div>
