--- a/app/components/sidebar.hbs
+++ b/app/components/sidebar.hbs
@@ -1,5 +1,5 @@
 <a href="/" class="block h-12 bg-blue-600">
-  <img src="/images/sidebar-logo@2x.png" width="60" height="48" alt="Davros" class="block absolute top-0 right-0">
+  <img src="/images/sidebar-logo@2x.png" width="60" height="48" alt="Davros" class="block absolute top-0 right-0 z-10">
 </a>
 
 <nav class="sidebar mt-11 text-center">
